# download-audio-youtube

./: README.md  app.py  requirements.txt
.github/workflows/: deploy.yml  lint.yml
src/api/: app.py  pyproject.toml  requirements.txt
src/frontend/: .env  package-lock.json  package.json
src/frontend/public/: index.html
src/frontend/src/: App.vue
src/frontend/src/components/: Footer.vue  YoutubeAudio.vue
