[tool.poetry]
name = "downloads-audio-youtube"
version = "0.1.0"
description = "Little project to download audio from youtube"
authors = ["rickslayer <paulo@actio.net.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^3.8.3"
boto3 = "^1.14.60"
Flask = "^1.1.2"
flask-cors = "^3.0.9"
python-dotenv = "^0.14.0"
moviepy = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
